feat(frontend): hide create/edit/delete actions for unauthenticated users
- Hide delete buttons on exercise/plan/session cards for guests
- Hide create FAB buttons on overview pages for guests
- Hide edit/start buttons on detail pages for guests
- Remove unused exerciseCount field from plans-lib Session interface

--- a/fitness-tracker-frontend/projects/exercises-lib/src/lib/views/exercises-overview/exercises-overview.html
+++ b/fitness-tracker-frontend/projects/exercises-lib/src/lib/views/exercises-overview/exercises-overview.html
@@ -44,8 +44,10 @@
   </div>
   }
 
+  @if (authService.isLoggedIn()) {
   <button mat-fab extended class="create-fab" (click)="openCreateDialog()">
     <span class="material-icons">add</span>
     Create
   </button>
+  }
 </section>
