--- a/fitness-tracker-frontend/projects/exercises-lib/src/lib/views/exercise-detail/exercise-detail.html
+++ b/fitness-tracker-frontend/projects/exercises-lib/src/lib/views/exercise-detail/exercise-detail.html
@@ -8,7 +8,7 @@
     <mat-card-content>
       <div class="header">
         <h1>Exercise Details</h1>
-        @if (!isEditMode) {
+        @if (!isEditMode && authService.isLoggedIn()) {
         <button mat-raised-button class="edit-btn" (click)="enableEditMode()">
           <mat-icon>edit</mat-icon>
           Edit
