--- a/fitness-tracker-frontend/src/app/pages/login/login.scss
+++ b/fitness-tracker-frontend/src/app/pages/login/login.scss
@@ -1,10 +1,13 @@
 .login-page {
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: var(--fitness-bg-page);
   padding: 2rem;
+  box-sizing: border-box;
 }
 
 .login-card {
